compiler/lyra/src/test/resources/semantic_errors/SuperUnresolved.ly
class A {
    def constructor(x : Int) { out.writeln(x); }
}

class B extends A {
    def constructor(x : String) { super(x); }
}

class Application {
    def main {

    }
}